# risk_agent

./: AGENTS.md  Makefile  README.md  check_dns.py  check_models.py  fix_env.py  pyproject.toml  requirements.txt  run_cli.py  test_connection.py  test_image_search.py  verify_multimodal.py  verify_retrieval.py
docs/: mkdocs.yml
docs/docs/: index.md
risk_agent/: __init__.py  config.py  dataset.py  features.py  ingest_images.py  llm.py  logic.py  main.py  plots.py
risk_agent/modeling/: predict.py  train.py
tests/: fraud_call.txt  nonscm.txt  scm.txt  test_connection.py  test_image_search.py  verify_api.py  verify_retrieval.py
