[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "risk_agent"
version = "0.0.1"
description = "A Multimodal Agent to analyze the financial Risk"
authors = [
  { name = "Hemanth" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.11"


[tool.ruff]
line-length = 99
src = ["risk_agent"]
include = ["pyproject.toml", "risk_agent/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["risk_agent"]
force-sort-within-sections = true

